k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets
spec:
  selector:
    matchLabels:
      app: tickets
  replicas: 1
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: nextjs
          image: ghcr.io/smartnuance/tickets:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surrealdb
spec:
  selector:
    matchLabels:
      app: surrealdb
  replicas: 1
  template:
    metadata:
      labels:
        app: surrealdb
    spec:
      containers:
        - name: surrealdb
          image: surrealdb/surrealdb:latest
          imagePullPolicy: Always
          args:
            - start
            - --log=debug
            # - --user=root
            # - --pass=root
          ports:
            - containerPort: 8000
