k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
  selector:
    app: tickets
---
apiVersion: v1
kind: Service
metadata:
  name: surrealdb
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
  selector:
    app: surrealdb
